--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.defaultInterpreterPath": "/bin/python2",
-    "python.pythonPath": "/bin/python2"
+    "python.pythonPath": "/bin/python2",
+    "python.analysis.typeCheckingMode": "basic"
 }
